--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -22,7 +22,9 @@
     "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.14.0",
     "tsx": "^3.12.7",
-    "ws": "^8.13.0"
+    "uuid": "^9.0.0",
+    "ws": "^8.13.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@rollup/plugin-graphql": "^2.0.3",
@@ -31,6 +33,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.7",
+    "@types/uuid": "^9.0.3",
     "@types/ws": "^8.5.5",
     "rollup": "^3.28.1",
     "typescript": "^5.2.2"
