--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -14,6 +14,7 @@
     "declarationMap": true,
     "declaration": true
   },
+  "exclude": ["./dist"],
   "include": ["./src/**/*.*"],
   "files": ["src/typings.d.ts"]
 }
