--- a/packages/control/package.json
+++ b/packages/control/package.json
@@ -10,33 +10,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.1",
-    "@beamerstream/library": "workspace:./packages/library",
+    "@apollo/client": "^3.8.4",
+    "@beamerstream/library": "workspace:^",
     "@headlessui/react": "^1.7.17",
     "@headlessui/tailwindcss": "^0.2.0",
-    "electron": "^26.1.0",
-    "flexlayout-react": "^0.7.9",
-    "graphql": "^16.8.0",
-    "graphql-ws": "^5.14.0",
+    "electron": "^26.2.4",
+    "flexlayout-react": "^0.7.12",
+    "graphql": "^16.8.1",
+    "graphql-ws": "^5.14.1",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.16.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react-swc": "^3.3.2",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.45.0",
+    "@types/react": "^18.2.24",
+    "@types/react-dom": "^18.2.8",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "@vitejs/plugin-react-swc": "^3.4.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.50.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.4.28",
+    "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9"
   }
 }
