--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,8 +9,8 @@
     "build": "rollup -c && copyfiles --flat ./src/schema.graphql ./dist/"
   },
   "dependencies": {
-    "@apollo/server": "^4.9.2",
-    "@beamerstream/library": "workspace:./packages/library",
+    "@apollo/server": "^4.9.3",
+    "@beamerstream/library": "workspace:^",
     "@graphql-tools/schema": "^10.0.0",
     "body-parser": "^1.20.2",
     "copyfiles": "^2.4.1",
@@ -18,24 +18,24 @@
     "cpy-cli": "^5.0.0",
     "express": "^4.18.2",
     "get-port": "^7.0.0",
-    "graphql": "^16.8.0",
+    "graphql": "^16.8.1",
     "graphql-subscriptions": "^2.0.0",
-    "graphql-ws": "^5.14.0",
-    "tsx": "^3.12.7",
-    "uuid": "^9.0.0",
-    "ws": "^8.13.0",
+    "graphql-ws": "^5.14.1",
+    "tsx": "^3.13.0",
+    "uuid": "^9.0.1",
+    "ws": "^8.14.2",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@rollup/plugin-graphql": "^2.0.3",
-    "@rollup/plugin-typescript": "^11.1.3",
+    "@rollup/plugin-typescript": "^11.1.4",
     "@sindresorhus/tsconfig": "^4.0.0",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.5.7",
-    "@types/uuid": "^9.0.3",
-    "@types/ws": "^8.5.5",
-    "rollup": "^3.28.1",
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.18",
+    "@types/node": "^20.8.0",
+    "@types/uuid": "^9.0.4",
+    "@types/ws": "^8.5.6",
+    "rollup": "^3.29.4",
     "typescript": "^5.2.2"
   },
   "engines": {
