--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,23 +16,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v3.8.1
       with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - name: Setup Yarn
-      uses: mskelton/setup-yarn@v1.6.0
-      #with:
-        # Additional flags to pass to the install command.
-        #flags: # optional
-        # Node version to use, defaults to the current LTS version.
-        #node-version: # optional, default is 18.x
-        # Git ref to checkout. Passed to `actions/checkout`.
-        #ref: # optional
-        # Used to specify a package manager for caching in the default directory. Supported values: npm, yarn, pnpm
-        #cache: # optional, default is yarn
-        # Fetch depth of the checkout. Passed to `actions/checkout`.
-        #fetch-depth: # optional
+        # Version Spec of the version to use. Examples: 12.x, 10.15.1, >=10.15.0.
+        node-version: 18.x
+        # Used to specify a package manager for caching in the default directory. Supported values: npm, yarn, pnpm.
+        cache: 'yarn'
+    - name: Enable corepack
+      run: corepack enable
+    - name: Set yarn version
+      run: yarn set version stable
     - run: yarn install --frozen-lockfile
     - run: yarn workspace @beamerstream/control build
