--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,7 +22,7 @@ jobs:
         # Version Spec of the version to use. Examples: 12.x, 10.15.1, >=10.15.0.
         node-version: 18.x
         # Used to specify a package manager for caching in the default directory. Supported values: npm, yarn, pnpm.
-        cache: 'yarn'
+        #cache: 'yarn'
     - name: Enable corepack
       run: corepack enable
     - name: Set yarn version
