--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,19 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "watch": "tsx watch ./src/index.ts",
-    "dev": "tsx ./src/index.ts",
-    "build": "rollup -c && copyfiles --flat ./src/schema.graphql ./dist/",
-    "start": "node ./dist/"
+    "dev": "tsx src/index",
+    "watch": "tsx --watch src/index.ts",
+    "build": "rimraf dist && pkgroll && ncp src/static dist/static",
+    "start": "node dist/index.cjs"
   },
   "dependencies": {
     "@apollo/server": "^4.9.3",
     "@graphql-tools/schema": "^10.0.0",
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.18",
+    "@types/node": "^20.8.0",
+    "@types/uuid": "^9.0.4",
+    "@types/ws": "^8.5.6",
     "body-parser": "^1.20.2",
     "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
@@ -21,30 +26,25 @@
     "graphql": "^16.8.1",
     "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.14.1",
-    "tsx": "^3.13.0",
     "uuid": "^9.0.1",
     "ws": "^8.14.2",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
-    "@rollup/plugin-graphql": "^2.0.3",
-    "@rollup/plugin-typescript": "^11.1.4",
     "@sindresorhus/tsconfig": "^4.0.0",
-    "@types/cors": "^2.8.14",
-    "@types/express": "^4.17.18",
-    "@types/node": "^20.8.0",
-    "@types/uuid": "^9.0.4",
-    "@types/ws": "^8.5.6",
-    "rollup": "^3.29.4",
-    "typescript": "^5.2.2"
+    "ncp": "^2.0.0",
+    "pkgroll": "^2.0.1",
+    "rimraf": "^5.0.5",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
-  "files": [
-    "./dist/**/*.*"
-  ],
-  "exports": [
-    "./dist/index.js"
-  ]
+  "exports": {
+    "require": {
+      "default": "./dist/Server.cjs",
+      "start": "./dist/index.cjs"
+    }
+  }
 }
