--- a/control/package.json
+++ b/control/package.json
@@ -11,17 +11,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.4",
+    "@apollo/client": "^3.9.4",
     "@headlessui/react": "^1.7.17",
     "@headlessui/tailwindcss": "^0.2.0",
+    "classnames": "^2.5.1",
     "electron": "^26.2.4",
     "flexlayout-react": "^0.7.12",
     "graphql": "^16.8.1",
-    "graphql-ws": "^5.14.1",
+    "graphql-ws": "^5.15.0",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.22.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
