Change Graphql for tRPC

--- a/common/package.json
+++ b/common/package.json
@@ -8,6 +8,7 @@
     "build": "rimraf dist && pkgroll",
     "watch": "pkgroll --watch"
   },
+  "types": "./dist/index.d.ts",
   "exports": {
     "types": "./dist/index.d.ts"
   },
