--- a/control/package.json
+++ b/control/package.json
@@ -11,14 +11,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "^3.9.4",
+    "@beamerstream/server": "^1.0.0",
     "@headlessui/react": "^1.7.17",
     "@headlessui/tailwindcss": "^0.2.0",
+    "@tanstack/react-query": "^5.24.1",
+    "@trpc/client": "^11.0.0-next-beta.294",
+    "@trpc/next": "^11.0.0-next-beta.294",
+    "@trpc/react-query": "^11.0.0-next-beta.294",
+    "@trpc/server": "^11.0.0-next-beta.294",
     "classnames": "^2.5.1",
     "electron": "^26.2.4",
     "flexlayout-react": "^0.7.12",
-    "graphql": "^16.8.1",
-    "graphql-ws": "^5.15.0",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
@@ -38,6 +41,6 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
-    "vite": "^4.4.9"
+    "vite": "^5.1.4"
   }
 }
