--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,19 @@
   "scripts": {
     "dev": "tsx src/index",
     "watch": "tsx --watch src/index.ts",
-    "build": "rimraf dist && pkgroll && ncp src/static dist/static",
+    "build": "rimraf dist && pkgroll",
     "start": "node dist/index.cjs"
   },
+  "engines": {
+    "node": ">=18"
+  },
+  "types": "./dist/Server.d.cts",
+  "exports": {
+    "default": "./dist/Server.cjs",
+    "start": "./dist/index.cjs"
+  },
   "dependencies": {
-    "@apollo/server": "^4.10.0",
-    "@graphql-tools/schema": "^10.0.2",
+    "@trpc/server": "^11.0.0-next-beta.294",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/node": "^20.8.0",
@@ -23,28 +30,16 @@
     "cpy-cli": "^5.0.0",
     "express": "^4.18.2",
     "get-port": "^7.0.0",
-    "graphql": "^16.8.1",
-    "graphql-subscriptions": "^2.0.0",
-    "graphql-ws": "^5.14.3",
     "uuid": "^9.0.1",
     "ws": "^8.14.2",
-    "xml-js": "^1.6.11"
+    "xml-js": "^1.6.11",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@sindresorhus/tsconfig": "^4.0.0",
-    "ncp": "^2.0.0",
     "pkgroll": "^2.0.1",
     "rimraf": "^5.0.5",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "exports": {
-    "require": {
-      "default": "./dist/Server.cjs",
-      "start": "./dist/index.cjs"
-    }
   }
 }
